Moved Services and Handlers to Domain project

--- a/Web/Birthdays.Web.csproj
+++ b/Web/Birthdays.Web.csproj
@@ -21,6 +21,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Birthdays.Domain\Birthdays.Domain.csproj" />
       <ProjectReference Include="..\Data\Birthdays.Data.csproj" />
     </ItemGroup>
 
